@@ -14,7 +14,7 @@ repositories {
 }
 
 dependencies {
-    compile('org.openforis.collect:collect-core:3.0.1-Alpha17') {
+    compile('org.openforis.collect:collect-core:3.1.0-a2') {
         exclude group: 'commons-jxpath'
     }
     compile 'commons-jxpath:commons-jxpath:1.3'
